// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle must showing the component with product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - without image
  </span>
</div>
`;

exports[`ProductTitle show component with custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom title
</span>
`;
